# ChangeLog for dev-ruby/thread_safe
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/thread_safe/ChangeLog,v 1.9 2014/01/04 16:20:38 mrueg Exp $

  04 Jan 2014; Manuel Rüger <mrueg@gentoo.org> -thread_safe-0.1.2.ebuild,
  -thread_safe-0.1.3.ebuild:
  Cleanup old.

  08 Dec 2013; Johannes Huber <johu@gentoo.org> thread_safe-0.1.3-r1.ebuild:
  add ~x86, bug #487178

  13 Oct 2013; Markus Meier <maekke@gentoo.org> thread_safe-0.1.3-r1.ebuild:
  add ~arm, bug #487178

  07 Oct 2013; Jeroen Roovers <jer@gentoo.org> thread_safe-0.1.3-r1.ebuild:
  Marked ~hppa (bug #487178).

*thread_safe-0.1.3-r1 (04 Oct 2013)

  04 Oct 2013; Manuel Rüger <mrueg@gentoo.org> +thread_safe-0.1.3-r1.ebuild:
  Add ruby20 target.

*thread_safe-0.1.3 (11 Sep 2013)

  11 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +thread_safe-0.1.3.ebuild:
  Version bump.

  02 Aug 2013; Manuel Rüger <mrueg@gentoo.org> -thread_safe-0.1.0.ebuild,
  thread_safe-0.1.2.ebuild:
  Add missing dep, thanks to Jonathan Geisler. Fixes bug #479336. Cleanup.

*thread_safe-0.1.2 (25 Jul 2013)

  25 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +thread_safe-0.1.2.ebuild:
  Version bump

*thread_safe-0.1.0 (26 Dec 2012)

  26 Dec 2012; Hans de Graaff <graaff@gentoo.org> +thread_safe-0.1.0.ebuild,
  +metadata.xml:
  Initial import. Dependency for forthcoming dev-ruby/rails:4.