@@ -1,4 +1,5 @@
 DIST thread_safe-0.1.3.gem 136704 SHA256 f8b9f8db0889aa97676b4a1efe919b1e76601ed9c9662a986825755bba305c38 SHA512 ef54d618a3de34716705d23081dbc325031be33dd6819f28b3601bbc62da4c79d4ae0c5dcad5490efa25f998184509b672be3b6f223fbfc9505d64a7c217c3cb WHIRLPOOL 5ea88ad1b8f15d9472b5d5eeaf21c9e23f85d50381ace20d4243ff19165dde80ac95d3f9990a95d88614d15b2d7828ddc7acd37e5a39c34008c7a3a0a97459b2
 EBUILD thread_safe-0.1.3-r1.ebuild 726 SHA256 11296d540f7636d6d4da1392325f5700e21cd4af02da9bc5279023c3bfcd5e5e SHA512 2a97885d595b9df8749ef42415e35adbe9bcef3578d5b6644326a0047bd38ecc92c42e33abc5fdb673174199a5cad4e563c7f4bc1ca7128096c8a06defaabe20 WHIRLPOOL 8044c9ebc845af7a4961ddf05bb8452ebecd5e66e73b75353a06f4c8296e1085ee9c24fb50e4737638bd35411a249b83bc039ae93df067d709a950c075c26317
-MISC ChangeLog 1401 SHA256 3a75875f231d0a076f617570cb8dc1ed83d1d0939746bfa2378fe619ea4a3aa3 SHA512 ac90e0a00a31c7480062ba630880189b791afca6c1d6930e5cd65db33e3f015b250925381f11989ba31f1fb96132af0a807517d00681f890d6081f6fbae8d033 WHIRLPOOL 19f1d28e0f0535c99bdf473b2c7b494dd4aab0103c8fc3328e19de5edb7f6c7881c5b99130d3445eb2fe2a13ca55d5206de6d809ee261a6c10f2c44cd823dda0
+EBUILD thread_safe-0.1.3-r2.ebuild 734 SHA256 c2485fdc6d9f9f9c66e19cc2c9492a9bb45c071931bce7b02a103b176eccb965 SHA512 b9f6b1fdaa0d2d68b7af1d2cc146ffc5a89361d79a19bd2c1e842df29606b07eee8eb0a95d75d1aa76d126d569b727d3921323f1ec100c812bab6168ce057c68 WHIRLPOOL 7767ef1132d597f06f80c28fc62ed0930c0c17b6e098319c57d42bdd4566651f14cbd1438948a282daf4c6e62ef718694a988aa383658cefb81b34c225e511cc
+MISC ChangeLog 1539 SHA256 31082abb8dbf7675e6cde6479b583eda5ead725d53a21ed88d83cdf8671cee62 SHA512 8bdd3624d02e789a5562b5a9f4e726a0be304dd49db551b3061a5f65f63bcd6b05176ec9ffacda7c3dc6321f4d9b74ded5c732da071a276ea0b0935e443d19ec WHIRLPOOL 3db5b113b5bbc29323871b78664f06a07315c7c8b1be4cbd399b8115ae0fc22f7afd8b3fd9df06e2296ff9f197b004542bda0e8b3bc6bf6bf922729d0a41c382
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
