@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/thread_safe
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/thread_safe/ChangeLog,v 1.9 2014/01/04 16:20:38 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/thread_safe/ChangeLog,v 1.10 2014/01/04 16:54:35 mrueg Exp $
+
+*thread_safe-0.1.3-r2 (04 Jan 2014)
+
+  04 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +thread_safe-0.1.3-r2.ebuild:
+  Add ruby21 target.
 
   04 Jan 2014; Manuel Rüger <mrueg@gentoo.org> -thread_safe-0.1.2.ebuild,
   -thread_safe-0.1.3.ebuild:
